# veripak

./: .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  SECURITY.md  llms-full.txt  llms.txt  pyproject.toml
.claude/: docs-state.json
.claude/commands/: create-release.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  test.yml
docs/: README.md
planning/: PLAN.md
planning/retrospectives/2026-04-09_agent-feedback-improvements/: RETRO.md
prompts/: summary_rules.md
research/: batch-processing-impact.md  research-litellm-security.md
retrospectives/2026-04-09_issue-1-json-mode/: RETRO.md
retrospectives/2026-04-11_v0.6.2-urgency-java-convergence/: RETRO.md
scripts/: check-links.py  generate-llms-full.py  release.sh
src/veripak/: __init__.py  agent.py  cli.py  config.py  mcp_server.py  model_caller.py  tavily.py  version.py
src/veripak/agents/: __init__.py  base.py  cve_agent.py  ecosystem_agent.py  eol_agent.py
src/veripak/checkers/: cves.py  download_discovery.py  downloads.py  ecosystem.py  eol.py  migration.py  replacements.py  summarize.py  versions.py
tests/: test_checkers.py  test_cli_config.py  test_json_mode.py
