[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veripak"
version = "0.2.1"
description = "CLI tool for auditing open-source packages: version, CVEs, downloads, and replacement validation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Wes Jackson", email = "wjackson@redhat.com"}
]
keywords = ["packages", "audit", "security", "cve", "dependencies"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0",
    "litellm>=1.0",
    "packaging>=23.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
veripak = "veripak.cli:main"
vpk = "veripak.cli:main"

[project.urls]
Homepage = "https://github.com/rdwj/veripak"
Repository = "https://github.com/rdwj/veripak"
Issues = "https://github.com/rdwj/veripak/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/veripak"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=veripak",
    "--cov-report=html",
    "--cov-report=term-missing",
    "-v"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
